Fix color contrast on button to improve accessibility

--- a/style.css
+++ b/style.css
@@ -385,8 +385,8 @@ main {
 
 .button:hover {
   background: #fff5e1;
-  border: 1px solid #f55800;
-  color: #f55800;
+  border: 1px solid #c64700;
+  color: #c64700;
 }
 
 .button:active {
